hphp/hack/test/typecheck/shape_key_exists6.php
<?hh

// Not matching return type of keyExists

function test(): string {
  return Shapes::keyExists(shape('z' => 3), 'z');
}
